--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
         <h1>Hello, world!</h1>
-        <p>This is the result of what would happen if <a href="http://html5boilerplate.com/">H5BP</a>, complete with <a href="https://github.com/h5bp/ant-build-script">build script</a>, had a bab with <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>. This was built using initializr but it is easier to put it into github and <code>git clone</code></p>
+        <p>This is the result of what would happen if <a href="http://html5boilerplate.com/">H5BP</a>, complete with <a href="https://github.com/h5bp/ant-build-script">build script</a>, had a baby with <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>. This was built using initializr but it is easier to put it into github and <code>git clone</code></p>
         <p><a href="http://www.initializr.com/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
       </div>
 
